# my_ROS_mobile_robot

./: .gitignore  README.md  TODO.md
.github/: FUNDING.yml
AS5048/: AS5048.ino
AS5048-ros-node/: AS5048-ros-node.ino  ATmega2560-HW.h  MagneticEncoder.h
L298N_Test/: L298N_Test.ino
L298N_v2/: DCMotor.h  L298N_v2.ino
arduino_actuators_new/: CMakeLists.txt  package.xml
arduino_actuators_new/launch/: execute.launch
arduino_actuators_new/src/main/: main.ino
arduino_actuators_new/src/main/include/: ATmega2560-HW.h  DCMotor.h  MagneticEncoder.h
arduino_core/: CMakeLists.txt  package.xml
arduino_core/launch/: execute.launch
arduino_core/src/main/: main.ino
arduino_core/src/main/include/: ATmega2560-HW.h  ActionBridge.h  ControllerClient.h  DCMotor.h  DifferentialDriveRobot.h
arduino_core/src/main/include/action_controller/: PIDAction.h  PIDActionFeedback.h  PIDActionGoal.h  PIDActionResult.h  PIDFeedback.h  PIDGoal.h  PIDResult.h
arduino_core/src/main/include/action_controller/action_msgs/: GoalID.h  GoalStatus.h
arduino_scripts/: README.md
arduino_scripts/control_node/: README.md  package.xml
arduino_scripts/control_node/src/: DifferentialDriveRobot.h
arduino_scripts/robot_msgs/: CMakeLists.txt  package.xml
control_node/: CMakeLists.txt
from_keyboard_node/: ATmega2560-HW.h  DCMotor.h  DifferentialDriveRobot.h  from_keyboard_node.ino
from_keyboard_node-local_variables/: ATmega32U4-HW.h  DCMotor.h  DifferentialDriveRobot.h
from_keyboard_node_test/: from_keyboard_node_test.ino
my_pid_action_msg/: CMakeLists.txt  package.xml
my_robot_base/: CMakeLists.txt  README.md  package.xml
my_robot_base/include/: my_robot_hw_interface.h
my_robot_base/launch/: hw_control.launch
my_robot_base/src/: my_robot_base.cpp  my_robot_hw_interface.cpp
my_robot_bringup/: CMakeLists.txt  README.md  package.xml
my_robot_control/: CMakeLists.txt  README.md  package.xml
my_robot_control/config/: my_robot_common.yaml  my_robot_control.yaml
my_robot_control/include/: my_robot_hw_interface.h
my_robot_control/launch/: my_robot_control.launch
my_robot_control/src/: my_robot_hw_interface.cpp
my_robot_description/: CMakeLists.txt  README.md  package.xml
my_robot_description/launch/: display.launch  my_robot_rviz.launch  my_robot_rviz_amcl.launch  my_robot_rviz_gmapping.launch
my_robot_description/meshes/: README.md  base_plate.dae  caster_wheel.dae  chassis.dae  chassis_resized.stl  hokuyo.dae  left_wheel.dae  right_wheel.dae
my_robot_description/meshes/step_bkp/: README.md  caster_wheel.dae  caster_wheel.step  chassis.step
my_robot_description/robots/: my_robot_circles_kinect.urdf.xacro
my_robot_description/rviz/: amcl.rviz  mapping.rviz  my_robot.rviz  navigation.rviz  slam.rviz  urdf.rviz
my_robot_description/to_improve/meshes/: caster_wheel.dae  chassis.dae  chassis.stl  chassis_resized.dae  create_body.tga  left_wheel.stl  left_wheel_resized.dae  left_wheel_resized.stl  right_wheel.dae  right_wheel.stl  right_wheel_resized.stl  wheel.dae
my_robot_description/to_improve/robots/: my_robot_circles_kinect.urdf.xacro  roomba_circles_kinect.urdf.xacro
my_robot_description/to_improve/urdf/: my_robot_library.urdf.xacro  my_robot_rviz_library.urdf.xacro
my_robot_description/urdf/: camera.xacro  inertias.xacro  macros.xacro  materials.xacro  my_robot.gazebo  my_robot.urdf  my_robot.xacro  my_robot_base.xacro  my_robot_properties.xacro  my_robot_rviz_base.urdf.xacro  sensors.xacro  velodyne.xacro
my_robot_description/urdf/old/: macros.xacro  materials.xacro  my_robot.gazebo  my_robot.gv  my_robot.urdf  my_robot.xacro
my_robot_description/urdf/other/: my_robot_base.urdf.xacro  my_robot_base_gazebo.urdf.xacro
my_robot_description/urdf/other/sensors/: asus_xtion_pro.urdf.xacro  kinect.urdf.xacro
my_robot_description/urdf/urdf/: my_robot.gv  my_robot.urdf
my_robot_gazebo/: CMakeLists.txt  README.md  package.xml
my_robot_gazebo/launch/: amcl_demo.launch  gmapping_demo.launch  main.launch  my_robot_empty_world.launch  my_robot_playground.launch  my_robot_world.launch
my_robot_gazebo/launch/includes/: my_robot_base.launch.xml
my_robot_gazebo/to_improve/launch/: my_robot_empty_world.launch  my_robot_playground.launch  my_robot_room_world.launch
my_robot_gazebo/to_improve/launch/includes/: my_robot_base.launch.xml
my_robot_gazebo/worlds/: my_robot.world  playground.world
my_robot_navigation/: CMakeLists.txt  README.md  package.xml
my_robot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slam_gmapping_params.yaml
my_robot_navigation/launch/: navigate.launch  slam_gmapping.launch
my_robot_plugins/: CMakeLists.txt  package.xml
my_robot_plugins/include/my_robot_plugins/: velodyne_plugin.h  velodyne_plugin.hh
my_robot_plugins/src/: velodyne_plugin.cpp
my_robot_scripts/: README.md
my_robot_scripts/esp32_scripts/esp32_peripherals/: CMakeLists.txt  package.xml
my_robot_scripts/esp32_scripts/esp32_peripherals/launch/: run_esp32_node.launch
my_robot_scripts/esp32_scripts/esp32_peripherals/src/esp32_peripherals/: esp32_peripherals.ino
my_robot_scripts/esp32_scripts/esp32_peripherals/src/esp32_peripherals/include/: DCMotor.h  ESP32HW.h  WiFiHardware.h
odometry_publisher/: CMakeLists.txt  package.xml
odometry_publisher/src/: odometry_publisher.cpp
pid_action/: CMakeLists.txt  package.xml
pid_ddmr_wheels_server/: CMakeLists.txt  package.xml
pid_ddmr_wheels_server/action/: PID.action
pid_ddmr_wheels_server/launch/: execute.launch
pid_ddmr_wheels_server/src/: PID-Wheels-Server.cpp  PID-Wheels-Server.h
pid_wheels/: CMakeLists.txt  package.xml
pid_wheels/action/: PID.action
pid_wheels/launch/: execute.launch  test.launch
pid_wheels/src/: ControllerClient.cpp  ControllerClient.h  ControllerServer.cpp  ControllerServer.h  DifferentialDriveRobot.h
pid_wheels_ac/: CMakeLists.txt  package.xml
pid_wheels_as/: CMakeLists.txt  package.xml
resources/: README.md
robot_description/: CMakeLists.txt  README.md
robot_msgs/: README.md  (+2 more)
(+83 files in other folders)
