<?xml version="1.0"?>
<package>
  <name>arduino_actuators_new</name>
  <version>1.0.0</version>
  <description>The arduino_actuators_new package is similar to the arduino_actuatores package, but uses the JointState message to publish the encoder values.</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>robot_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
