<?xml version="1.0"?>
<package>
  <name>arduino_core</name>
  <version>0.0.1</version>
  <description>Merging the arduino_actuators code and the action client of the pid_wheels package.</description>

  <maintainer email="emiliano_borghi@hotmail.com">emiliano</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
