<?xml version="1.0"?>
<package>
  <name>my_robot_navigation</name>
  <version>0.0.1</version>
  <description>The my_robot_navigation package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>my_robot_gazebo</run_depend>
  <run_depend>gmapping</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
