<?xml version="1.0"?>
<package>
  <name>control_node</name>
  <version>0.0.1</version>
  <description>The control_node package</description>

  <maintainer email="emiliano_borghi@hotmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robot_msgs</build_depend>
  <!--build_depend>message_generation</build_depend-->

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robot_msgs</run_depend>
  <!--run_depend>message_runtime</run_depend-->
  
</package>
