<?xml version="1.0"?>
<package>
  <name>robot_msgs</name>
  <version>1.0.0</version>
  <description>The robot_msgs package</description>

  <maintainer email="emiliano_borghi@hotmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
