<?xml version="1.0"?>
<package>
  <name>esp32_peripherals</name>
  <version>0.0.1</version>
  <description>The esp32_peripherals package</description>

  <maintainer email="emiliano.borghi@gmail.com">Emiliano Borghi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
